--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
 GIT 1st
 
-0602
+0602=2nd commit
 
-2nd commit
-
-
-0702
-
-<<<<<<< HEAD
-3rd Commit
-
+0702=3rd Commit
 
 4th commit = feat = Feature branch created 
-=======
-<b>3rd Commit</b>
->>>>>>> parent of 9787109 (Feature Branch)
+
